--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, BetterGestureDetectorActivity!</string>
-    <string name="app_name">BetterGestureDetector</string>
+    <string name="app_name">Gesture</string>
+    <string name="listener">Listener</string>
+    <string name="rx">Rx</string>
 
 </resources>
